--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -6,6 +6,7 @@
   z-index: 5000;
   height: 72px;
   width: 100%;
+
   &__list {
     list-style: none;
 
@@ -23,8 +24,9 @@
 
     text-decoration: none;
     &:hover {
-      color: #ffd76e;
-      filter: blur(1px);
+      color: $white;
+      font-weight: 500;
+      text-shadow: 1px 1px 6px $orange, 2px 2px 10px $orange;
     }
   }
 }
