--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -41,81 +41,64 @@
     line-height: normal;
 
     position: absolute;
-    top: 45%;
-    right: 356px;
-  }
-  &__box-item-desc1 {
-    color: $white;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: normal;
-  }
-  &__box-item-desc2 {
-    color: $white;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: normal;
-  }
-  &__box-item-desc3 {
-    color: $white;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: normal;
-  }
-  &__box-item-desc4 {
-    color: $white;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: normal;
-  }
-  &__bg-box {
-    width: 334px;
-    height: 493px;
-    border: 2px solid $orange;
-
-    position: absolute;
-    left: 372px;
-    top: 480px;
-    z-index: 3000;
-  }
-  &__bg-box2 {
-    width: 239px;
-    height: 460px;
-    transform: rotate(-90deg);
-    border: 2px solid $white;
-
-    position: absolute;
-    right: 440px;
-    bottom: 197px;
+    top: 54%;
+    right: 26%;
   }
 
-  &__list :nth-child(1) {
-    position: absolute;
-    left: 556px;
-    top: 43%;
-    z-index: 4000;
-  }
-  &__list :nth-child(2) {
-    position: absolute;
-    left: 318px;
-    bottom: 230px;
-    z-index: 4000;
-  }
-  &__list :nth-child(3) {
-    position: absolute;
-    left: 556px;
-    top: 508px;
-    z-index: 4000;
-  }
-  &__list :nth-child(4) {
-    position: absolute;
-    right: 264px;
-    top: 50%;
-
-    z-index: 4000;
-  }
   &__list {
     display: flex;
     justify-content: center;
+    position: relative;
+    height: 626px;
+    list-style: none;
+    margin: 112px auto 0;
+    &::before {
+      border: 2px solid #ffd76e;
+      height: 493px;
+      width: 334px;
+      display: block;
+      content: "";
+      position: absolute;
+      top: -35px;
+      left: 19%;
+    }
+    &::after {
+      content: "";
+      border: 2px solid #fff;
+      width: 460px;
+      height: 239px;
+      display: block;
+      position: absolute;
+      left: 33%;
+      bottom: 95px;
+    }
+  }
+  &__box-item-desc {
+    color: $white;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: normal;
+  }
+  &__list-item {
+    text-align: center;
+    position: absolute;
+  }
+  &__list-item:nth-child(1) {
+    left: 35%;
+  }
+  &__list-item:nth-child(2) {
+    left: 19%;
+    bottom: 21.5%;
+    z-index: 200;
+  }
+  &__list-item:nth-child(3) {
+    left: 40%;
+    bottom: 0%;
+    z-index: 200;
+  }
+  &__list-item:nth-child(4) {
+    right: 24%;
+    bottom: 28%;
+    z-index: 200;
   }
 }
