--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&display=swap);
-@import url(https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css);
-
-@import "./utils/color";
-@import "./utils/mixin";
-@import "./utils/variables";
-
-@import "./components/header";
-@import "./components/promo";
-@import "./components/about";
+@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&display=swap),
+  url(https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css),
+  "./utils/color", "./utils/mixin", "./utils/variables", "./components/header",
+  "./components/promo", "./components/about", "./components/city",
+  "./components/information", "./components/support";
