--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,4 +2,4 @@
   url(https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css),
   "./utils/color", "./utils/mixin", "./utils/variables", "./components/header",
   "./components/promo", "./components/about", "./components/city",
-  "./components/information", "./components/support";
+  "./components/information", "./components/support", "./components/offers";
